initial plan and readme

--- a/PfDA Assignment.ipynb
+++ b/PfDA Assignment.ipynb
@@ -13,7 +13,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Simulate data of a phenomenon:\n",
+    "\n",
+    "e.g. ACL injuries in women's professional football\n",
+    "    injuries in women's football\n",
+    "\n",
+    "- at least 100 data points required\n",
+    "- 4 variables:\n",
+    "    e.g. age, trianing hours in week, kms covered in week, occupation (if not professional), previous injury, menstrual cycle\n",
+    "\n",
+    "Use a Jupyter notebook - use images, links, code etc\n",
+    "\n",
+    "Research likely relationships between variables, their distributions and relationships/ correlation with each other\n",
+    "\n",
+    "Simulate data by devising an algorithm\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
