updated age and training hours variables

--- a/PfDA Assignment.ipynb
+++ b/PfDA Assignment.ipynb
@@ -205,7 +205,217 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[31,\n",
+       " 24,\n",
+       " 26,\n",
+       " 27,\n",
+       " 36,\n",
+       " 46,\n",
+       " 20,\n",
+       " 27,\n",
+       " 39,\n",
+       " 20,\n",
+       " 16,\n",
+       " 20,\n",
+       " 15,\n",
+       " 19,\n",
+       " 15,\n",
+       " 21,\n",
+       " 37,\n",
+       " 12,\n",
+       " 25,\n",
+       " 17,\n",
+       " 21,\n",
+       " 35,\n",
+       " 40,\n",
+       " 16,\n",
+       " 26,\n",
+       " 19,\n",
+       " 17,\n",
+       " 15,\n",
+       " 33,\n",
+       " 23,\n",
+       " 18,\n",
+       " 19,\n",
+       " 26,\n",
+       " 23,\n",
+       " 49,\n",
+       " 18,\n",
+       " 34,\n",
+       " 21,\n",
+       " 18,\n",
+       " 16,\n",
+       " 26,\n",
+       " 18,\n",
+       " 12,\n",
+       " 25,\n",
+       " 15,\n",
+       " 15,\n",
+       " 17,\n",
+       " 32,\n",
+       " 28,\n",
+       " 26,\n",
+       " 23,\n",
+       " 38,\n",
+       " 19,\n",
+       " 38,\n",
+       " 40,\n",
+       " 32,\n",
+       " 20,\n",
+       " 33,\n",
+       " 20,\n",
+       " 18,\n",
+       " 31,\n",
+       " 40,\n",
+       " 28,\n",
+       " 38,\n",
+       " 15,\n",
+       " 14,\n",
+       " 34,\n",
+       " 29,\n",
+       " 38,\n",
+       " 45,\n",
+       " 20,\n",
+       " 39,\n",
+       " 16,\n",
+       " 18,\n",
+       " 18,\n",
+       " 49,\n",
+       " 32,\n",
+       " 26,\n",
+       " 35,\n",
+       " 16,\n",
+       " 28,\n",
+       " 19,\n",
+       " 23,\n",
+       " 28,\n",
+       " 49,\n",
+       " 18,\n",
+       " 46,\n",
+       " 42,\n",
+       " 27,\n",
+       " 17,\n",
+       " 18,\n",
+       " 33,\n",
+       " 37,\n",
+       " 17,\n",
+       " 27,\n",
+       " 10,\n",
+       " 32,\n",
+       " 43,\n",
+       " 31,\n",
+       " 39,\n",
+       " 32,\n",
+       " 38,\n",
+       " 43,\n",
+       " 40,\n",
+       " 34,\n",
+       " 15,\n",
+       " 19,\n",
+       " 35,\n",
+       " 22,\n",
+       " 25,\n",
+       " 16,\n",
+       " 19,\n",
+       " 18,\n",
+       " 42,\n",
+       " 22,\n",
+       " 33,\n",
+       " 19,\n",
+       " 38,\n",
+       " 46,\n",
+       " 48,\n",
+       " 22,\n",
+       " 34,\n",
+       " 15,\n",
+       " 16,\n",
+       " 15,\n",
+       " 45,\n",
+       " 19,\n",
+       " 36,\n",
+       " 17,\n",
+       " 41,\n",
+       " 26,\n",
+       " 17,\n",
+       " 41,\n",
+       " 49,\n",
+       " 44,\n",
+       " 19,\n",
+       " 25,\n",
+       " 17,\n",
+       " 24,\n",
+       " 21,\n",
+       " 36,\n",
+       " 16,\n",
+       " 31,\n",
+       " 19,\n",
+       " 22,\n",
+       " 19,\n",
+       " 49,\n",
+       " 21,\n",
+       " 19,\n",
+       " 19,\n",
+       " 19,\n",
+       " 19,\n",
+       " 32,\n",
+       " 16,\n",
+       " 31,\n",
+       " 34,\n",
+       " 22,\n",
+       " 35,\n",
+       " 18,\n",
+       " 17,\n",
+       " 29,\n",
+       " 17,\n",
+       " 24,\n",
+       " 40,\n",
+       " 31,\n",
+       " 40,\n",
+       " 36,\n",
+       " 29,\n",
+       " 10,\n",
+       " 12,\n",
+       " 20,\n",
+       " 17,\n",
+       " 17,\n",
+       " 41,\n",
+       " 15,\n",
+       " 31,\n",
+       " 19,\n",
+       " 18,\n",
+       " 15,\n",
+       " 15,\n",
+       " 41,\n",
+       " 18,\n",
+       " 35,\n",
+       " 17,\n",
+       " 37,\n",
+       " 46,\n",
+       " 17,\n",
+       " 12,\n",
+       " 43,\n",
+       " 31,\n",
+       " 39,\n",
+       " 35,\n",
+       " 28,\n",
+       " 27,\n",
+       " 31,\n",
+       " 35,\n",
+       " 17,\n",
+       " 19,\n",
+       " 19,\n",
+       " 11]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Age Variable data\n",
     "# I took a value of 5:1 females to males as per research, erring on the side of caution\n",
@@ -220,19 +430,255 @@
     "40-44 = 2\n",
     ">45 = 1.5'''\n",
     "\n",
+    "# probability =[0.04 = 8, 0.34 = 68, 0.12 = 24, 0.12 = 24, 0.12 = 24, 0.12 =24, 0.08 = 16, 0.06 = 12], size=200)\n",
+    "\n",
     "rng = np.random.default_rng()\n",
-    "age_choice = [\"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40-44\", \">45\"]\n",
-    "age = rng.choice(age_choice, p =[0.04, 0.34, 0.12, 0.12, 0.12, 0.12, 0.08, 0.06], size=200)"
+    "import random\n",
+    "from random import randrange\n",
+    "age = []\n",
+    "for _ in range(8):\n",
+    "    age.append(random.randint(10, 14))\n",
+    "for _ in range(68):\n",
+    "    age.append(random.randint(15, 19))\n",
+    "for _ in range(24):\n",
+    "    age.append(random.randint(20, 24))\n",
+    "for _ in range(24):\n",
+    "    age.append(random.randint(25, 29))\n",
+    "for _ in range(24):\n",
+    "    age.append(random.randint(30, 34))\n",
+    "for _ in range(24):\n",
+    "    age.append(random.randint(35, 39))\n",
+    "for _ in range(16):\n",
+    "    age.append(random.randint(40, 44))\n",
+    "for _ in range(12):\n",
+    "    age.append(random.randint(45, 49))\n",
+    "\n",
+    "random.shuffle(age)\n",
+    "\n",
+    "age"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[12,\n",
+       " 13,\n",
+       " 15,\n",
+       " 16,\n",
+       " 12,\n",
+       " 16,\n",
+       " 17,\n",
+       " 11,\n",
+       " 14,\n",
+       " 15,\n",
+       " 18,\n",
+       " 5,\n",
+       " 12,\n",
+       " 12,\n",
+       " 15,\n",
+       " 11,\n",
+       " 16,\n",
+       " 18,\n",
+       " 16,\n",
+       " 15,\n",
+       " 15,\n",
+       " 17,\n",
+       " 6,\n",
+       " 11,\n",
+       " 15,\n",
+       " 18,\n",
+       " 13,\n",
+       " 15,\n",
+       " 14,\n",
+       " 11,\n",
+       " 15,\n",
+       " 12,\n",
+       " 12,\n",
+       " 6,\n",
+       " 4,\n",
+       " 15,\n",
+       " 14,\n",
+       " 11,\n",
+       " 13,\n",
+       " 18,\n",
+       " 15,\n",
+       " 17,\n",
+       " 16,\n",
+       " 17,\n",
+       " 13,\n",
+       " 11,\n",
+       " 11,\n",
+       " 4,\n",
+       " 13,\n",
+       " 3,\n",
+       " 12,\n",
+       " 5,\n",
+       " 12,\n",
+       " 14,\n",
+       " 10,\n",
+       " 18,\n",
+       " 12,\n",
+       " 10,\n",
+       " 16,\n",
+       " 10,\n",
+       " 18,\n",
+       " 12,\n",
+       " 13,\n",
+       " 18,\n",
+       " 15,\n",
+       " 8,\n",
+       " 15,\n",
+       " 13,\n",
+       " 17,\n",
+       " 8,\n",
+       " 18,\n",
+       " 17,\n",
+       " 13,\n",
+       " 10,\n",
+       " 13,\n",
+       " 15,\n",
+       " 10,\n",
+       " 7,\n",
+       " 17,\n",
+       " 18,\n",
+       " 14,\n",
+       " 17,\n",
+       " 15,\n",
+       " 15,\n",
+       " 12,\n",
+       " 7,\n",
+       " 13,\n",
+       " 18,\n",
+       " 18,\n",
+       " 10,\n",
+       " 16,\n",
+       " 11,\n",
+       " 11,\n",
+       " 17,\n",
+       " 13,\n",
+       " 18,\n",
+       " 17,\n",
+       " 13,\n",
+       " 17,\n",
+       " 13,\n",
+       " 15,\n",
+       " 16,\n",
+       " 14,\n",
+       " 10,\n",
+       " 16,\n",
+       " 16,\n",
+       " 4,\n",
+       " 11,\n",
+       " 10,\n",
+       " 13,\n",
+       " 14,\n",
+       " 15,\n",
+       " 13,\n",
+       " 10,\n",
+       " 18,\n",
+       " 17,\n",
+       " 11,\n",
+       " 5,\n",
+       " 10,\n",
+       " 13,\n",
+       " 8,\n",
+       " 14,\n",
+       " 18,\n",
+       " 9,\n",
+       " 13,\n",
+       " 10,\n",
+       " 15,\n",
+       " 3,\n",
+       " 16,\n",
+       " 7,\n",
+       " 14,\n",
+       " 18,\n",
+       " 16,\n",
+       " 5,\n",
+       " 17,\n",
+       " 14,\n",
+       " 16,\n",
+       " 16,\n",
+       " 11,\n",
+       " 4,\n",
+       " 7,\n",
+       " 14,\n",
+       " 12,\n",
+       " 16,\n",
+       " 11,\n",
+       " 15,\n",
+       " 8,\n",
+       " 3,\n",
+       " 11,\n",
+       " 12,\n",
+       " 10,\n",
+       " 13,\n",
+       " 11,\n",
+       " 16,\n",
+       " 17,\n",
+       " 17,\n",
+       " 14,\n",
+       " 15,\n",
+       " 18,\n",
+       " 11,\n",
+       " 12,\n",
+       " 18,\n",
+       " 15,\n",
+       " 13,\n",
+       " 13,\n",
+       " 17,\n",
+       " 16,\n",
+       " 16,\n",
+       " 13,\n",
+       " 16,\n",
+       " 11,\n",
+       " 17,\n",
+       " 10,\n",
+       " 10,\n",
+       " 17,\n",
+       " 8,\n",
+       " 11,\n",
+       " 13,\n",
+       " 13,\n",
+       " 7,\n",
+       " 17,\n",
+       " 13,\n",
+       " 12,\n",
+       " 17,\n",
+       " 12,\n",
+       " 18,\n",
+       " 12,\n",
+       " 13,\n",
+       " 11,\n",
+       " 13,\n",
+       " 16,\n",
+       " 17,\n",
+       " 13,\n",
+       " 15,\n",
+       " 12,\n",
+       " 11,\n",
+       " 17,\n",
+       " 13,\n",
+       " 15,\n",
+       " 17]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Training Hours Variable data\n",
     "# I took a value of 7:1 for 10 training hours or greater: less than 10 training hours as per research\n",
+    "# Therefore probability of training hours being < 10 = 0.12 (or 0.24 for 200 values)\n",
+    "# and probability of training hours being >= 10 = 0.88 (or 1.76 for 200 values)\n",
+    "# I randomly shuffle the list to make it more realistic\n",
     "\n",
     "rng = np.random.default_rng()\n",
     "import random\n",
@@ -243,7 +689,12 @@
     "for _ in range(176):\n",
     "    training_hours.append(random.randint(10, 18))\n",
     "\n",
-    "# https://blog.finxter.com/create-a-list-of-random-numbers-the-most-pythonic-way/"
+    "random.shuffle(training_hours)\n",
+    "\n",
+    "training_hours\n",
+    "\n",
+    "# https://blog.finxter.com/create-a-list-of-random-numbers-the-most-pythonic-way/\n",
+    "# https://www.w3schools.com/python/ref_random_shuffle.asp#:~:text=The%20shuffle()%20method%20takes,not%20return%20a%20new%20list.    - for random.shuffle"
    ]
   },
   {
@@ -279,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +755,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Age</th>\n",
-       "      <th>Training Hours</th>\n",
+       "      <th>Training Hours Per Week</th>\n",
        "      <th>Mode of Injury</th>\n",
        "      <th>Menstral Cycle Stage</th>\n",
        "    </tr>\n",
@@ -312,38 +763,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>&gt;45</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Competition</td>\n",
-       "      <td>Ovulatory (Day 10-14)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>40-44</td>\n",
-       "      <td>3</td>\n",
+       "      <td>31</td>\n",
+       "      <td>12</td>\n",
        "      <td>Competition</td>\n",
        "      <td>Follicular (Day 1-9)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>15-19</td>\n",
-       "      <td>5</td>\n",
+       "      <th>1</th>\n",
+       "      <td>24</td>\n",
+       "      <td>13</td>\n",
        "      <td>Competition</td>\n",
        "      <td>Ovulatory (Day 10-14)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Competition</td>\n",
+       "      <td>Follicular (Day 1-9)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>30-34</td>\n",
-       "      <td>3</td>\n",
+       "      <td>27</td>\n",
+       "      <td>16</td>\n",
        "      <td>Competition</td>\n",
        "      <td>Luteal (Day 15-28)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>&gt;45</td>\n",
-       "      <td>6</td>\n",
+       "      <td>36</td>\n",
+       "      <td>12</td>\n",
        "      <td>Competition</td>\n",
-       "      <td>Ovulatory (Day 10-14)</td>\n",
+       "      <td>Follicular (Day 1-9)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -354,38 +805,38 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>195</th>\n",
-       "      <td>40-44</td>\n",
-       "      <td>14</td>\n",
+       "      <td>35</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Competition</td>\n",
+       "      <td>Luteal (Day 15-28)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
        "      <td>Competition</td>\n",
        "      <td>Follicular (Day 1-9)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>40-44</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Competition</td>\n",
-       "      <td>Luteal (Day 15-28)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>30-34</td>\n",
-       "      <td>15</td>\n",
+       "      <td>19</td>\n",
+       "      <td>13</td>\n",
        "      <td>Competition</td>\n",
-       "      <td>Luteal (Day 15-28)</td>\n",
+       "      <td>Follicular (Day 1-9)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
-       "      <td>30-34</td>\n",
+       "      <td>19</td>\n",
        "      <td>15</td>\n",
        "      <td>Competition</td>\n",
        "      <td>Luteal (Day 15-28)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
-       "      <td>15-19</td>\n",
+       "      <td>11</td>\n",
        "      <td>17</td>\n",
        "      <td>Competition</td>\n",
-       "      <td>Ovulatory (Day 10-14)</td>\n",
+       "      <td>Follicular (Day 1-9)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -393,30 +844,30 @@
        "</div>"
       ],
       "text/plain": [
-       "       Age  Training Hours Mode of Injury   Menstral Cycle Stage\n",
-       "0      >45               5    Competition  Ovulatory (Day 10-14)\n",
-       "1    40-44               3    Competition   Follicular (Day 1-9)\n",
-       "2    15-19               5    Competition  Ovulatory (Day 10-14)\n",
-       "3    30-34               3    Competition     Luteal (Day 15-28)\n",
-       "4      >45               6    Competition  Ovulatory (Day 10-14)\n",
-       "..     ...             ...            ...                    ...\n",
-       "195  40-44              14    Competition   Follicular (Day 1-9)\n",
-       "196  40-44              16    Competition     Luteal (Day 15-28)\n",
-       "197  30-34              15    Competition     Luteal (Day 15-28)\n",
-       "198  30-34              15    Competition     Luteal (Day 15-28)\n",
-       "199  15-19              17    Competition  Ovulatory (Day 10-14)\n",
+       "     Age  Training Hours Per Week Mode of Injury   Menstral Cycle Stage\n",
+       "0     31                       12    Competition   Follicular (Day 1-9)\n",
+       "1     24                       13    Competition  Ovulatory (Day 10-14)\n",
+       "2     26                       15    Competition   Follicular (Day 1-9)\n",
+       "3     27                       16    Competition     Luteal (Day 15-28)\n",
+       "4     36                       12    Competition   Follicular (Day 1-9)\n",
+       "..   ...                      ...            ...                    ...\n",
+       "195   35                       11    Competition     Luteal (Day 15-28)\n",
+       "196   17                       17    Competition   Follicular (Day 1-9)\n",
+       "197   19                       13    Competition   Follicular (Day 1-9)\n",
+       "198   19                       15    Competition     Luteal (Day 15-28)\n",
+       "199   11                       17    Competition   Follicular (Day 1-9)\n",
        "\n",
        "[200 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = {\"Age\": age,\n",
-    "        \"Training Hours\": training_hours,\n",
+    "        \"Training Hours Per Week\": training_hours,\n",
     "        \"Mode of Injury\": modeofinjury,\n",
     "        \"Menstral Cycle Stage\": menstrualcycle}\n",
     "df = pd.DataFrame(data)\n",
