--- a/PfDA Assignment.ipynb
+++ b/PfDA Assignment.ipynb
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -570,11 +570,12 @@
     }
    ],
    "source": [
+    "# Plot a Histogram for Age Distribution\n",
+    "\n",
     "fig, ax = plt.subplots(figsize = (12,6))\n",
     "male = df[df.Sex == \"Male\"]\n",
     "female = df[df.Sex == \"Female\"]\n",
     "\n",
-    "# sepal length histogram \n",
     "ax.set_title(\"Age Distribution\", fontweight='bold')\n",
     "ax.set(xlabel='Age')\n",
     "ax.set(ylabel=\"No. of Occurrences\")\n",
@@ -625,7 +626,7 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(12,3))\n",
     "\n",
-    "# Plot a histogram of the Randomy Generated Data\n",
+    "# Plot a histogram of the Randomly Generated Data\n",
     "ax.set_title(\"Age Distribution\", fontweight='bold')\n",
     "ax.set_xlabel(\"Age\")\n",
     "ax.set_ylabel(\"No. of Occurrences\")\n",
