--- a/PfDA Assignment.ipynb
+++ b/PfDA Assignment.ipynb
@@ -3193,7 +3193,7 @@
     "(Seaborn [n.d.](https://seaborn.pydata.org/tutorial/categorical.html))\n",
     "\n",
     "<a id=\"9\">[9]</a>\n",
-    "(Finxter.coom [2020](https://blog.finxter.com/create-a-list-of-random-numbers-the-most-pythonic-way/))\n",
+    "(Finxter.com [2020](https://blog.finxter.com/create-a-list-of-random-numbers-the-most-pythonic-way/))\n",
     "\n",
     "<a id=\"10\">[10]</a>\n",
     "(w3schools.com [n.d.](https://www.w3schools.com/python/ref_random_shuffle.asp#:~:text=The%20shuffle()%20method%20takes,not%20return%20a%20new%20list))\n",
