small grammar changes

--- a/PfDA Assignment.ipynb
+++ b/PfDA Assignment.ipynb
@@ -27,6 +27,7 @@
     "    - [Boxplots](#boxplots-of-the-measuring-variables)\n",
     "    - [Swarmplots](#swarm-plots-of-the-qualitative-variables)\n",
     "    - [Bar/Pie Charts](#bar/pie-charts-of-the-qualitative-variables)\n",
+    "\n",
     "- [Discussion](#discussion)\n",
     "\n",
     "- [References](#references)"
@@ -90,9 +91,9 @@
     "\n",
     "### Hours of Training per Week\n",
     "\n",
-    "From research, it is clear that amount of training hours completed by the athlete in a week will have a bearing on their susceptibility to injury. More training hours will lead to greater fatigue, less recovery time. As such overtraining, or excess training, can be a risk factor leading to greater susceptibility to ACL injury.\n",
+    "From research, it is clear that the amount of training hours completed by the athlete in a week will have a bearing on their susceptibility to injury. More training hours will lead to greater fatigue and less recovery time. As such overtraining, or excess training, can be a risk factor leading to greater susceptibility to ACL injury.\n",
     "\n",
-    "- One study found that training more than 10 hours per week increased the likelihood of suffering an ACL injury by 7.5. [[5]](#5)\n",
+    "- One study found that training more than 10 hours per week increased the likelihood of suffering an ACL injury by 7 and a half times. [[5]](#5)\n",
     "\n",
     "### Menstrual Cycle Stage\n",
     "\n",
@@ -3159,7 +3160,7 @@
     "\n",
     ">In terms of visualising the distributions of the qualitative variables, ***swarm plots*** were identified as being suitable. This particular plot uses an algorithm that prevents the data from overlapping, thus giving a better representation of the distribution of the data. A swarm plot of Mode of Injury vs Age was created, further categorised by sex. This plot gives a really good visual of the distribution of the age profile of athletes who sustain ACL injuries in both competition and in training. Firstly, it is clear that far more females sustain these injuries, as expected. Similarly, it is very clear that far more injuries occur in competition, while the age profile of the vast majority of injuries are in the 15-20 range.\n",
     "\n",
-    ">Finally, ***bar and pie charts*** were created to visualise the qualitative variables. These types of plots are useful in terms of visualising the overall profile of the variable and the number of occurrences for category in the variable."
+    ">Finally, ***bar and pie charts*** were created to visualise the qualitative variables. These types of plots are useful in terms of visualising the overall profile of the variable and the number of occurrences for each category in the variable."
    ]
   },
   {
